fixed material constants and unit scaling

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -22,8 +22,9 @@
     "pathToluene = \"20210511/092 2021 Toluol\"\n",
     "pathBuffer = \"20210511/093 2021 Wasser\"\n",
     "pathSample = \"20210511/094 2021 PS-Standard 1zu1000\"\n",
-    "refracParticle = 1.492\n",
-    "densityParticle = 1.32*1e6 # g/m^3"
+    "# for Polypropylene, PS\n",
+    "refracParticle = 1.593\n",
+    "densityParticle = 1.05*1e6 # g/m^3"
    ]
   },
   {
@@ -31,9 +32,10 @@
    "id": "2ddfa087-ad51-43bb-b25b-91251ac11407",
    "metadata": {},
    "source": [
-    "Refractive Index of\n",
-    "- Polypropylene, PP: 1.492 (https://www.osapublishing.org/ao/abstract.cfm?uri=ao-42-3-592)\n",
-    "- Polystyrene, PS: 1.593"
+    "Refractive Index and density of\n",
+    "- Polypropylene (PP): 1.492 and 0.91 g/mL  \n",
+    "  ( https://www.osapublishing.org/ao/abstract.cfm?uri=ao-42-3-592 )\n",
+    "- Polystyrene (PS): 1.593 and 1.05 g/mL"
    ]
   },
   {
@@ -332,6 +334,10 @@
     "def getConcentration(continResultDir, particleData, bufferData, tolueneData, plotRangeX=None, plot=False):\n",
     "    \"\"\"Implements [equation 8 in Austin 2020](https://link.springer.com/content/pdf/10.1007/s11051-020-04840-8.pdf).\"\"\"\n",
     "    dfDistrib, dfFit, varmap = getContinResults(continResultDir)\n",
+    "    # normalize distribution first\n",
+    "    area = integrate(dfDistrib.radius, dfDistrib.distrib)\n",
+    "    dfDistrib.distrib /= area\n",
+    "    dfDistrib.err /= area\n",
     "    theta = varmap['angle']\n",
     "    I_tot, _ = crAtAngle(particleData, theta)\n",
     "    I_dis, _ = crAtAngle(bufferData, theta)\n",
@@ -340,22 +346,23 @@
     "    wavelen = bufferData[\"Wavelength [nm]\"]\n",
     "    nMedium = bufferData[\"Refractive Index\"]\n",
     "    sigma_sca = np.array([diffScatteringCrossSection(radius, theta, wavelen, nMedium)\n",
-    "                          for radius in dfDistrib.radius.values*1e9]).flatten()\n",
-    "    concentrationNumbers = dfDistrib.distrib.values * intensity / sigma_sca\n",
-    "    volumes = np.pi * dfDistrib.radius.values**3 * 4/3 # in Si units = meters\n",
+    "                          for radius in dfDistrib.radius*1e9]).flatten()*1e-4 # in m^-2\n",
+    "    concentrationNumbers = dfDistrib.distrib * intensity / sigma_sca # in m^-3\n",
+    "    concentrationNumbers *= 1e-6 # convert to 1/mL\n",
+    "    concentrationNumbersSum = integrate(dfDistrib.radius, concentrationNumbers)\n",
+    "    volumes = np.pi * dfDistrib.radius**3 * 4/3 # in m^3\n",
     "    concentrationMass = particleData['density'] * volumes * concentrationNumbers\n",
-    "    concentrationNumbersSum = integrate(dfDistrib.radius.values, concentrationNumbers)\n",
-    "    concentrationMassSum = integrate(dfDistrib.radius.values, concentrationMass)\n",
+    "    concentrationMassSum = integrate(dfDistrib.radius, concentrationMass)\n",
     "    if plot:\n",
     "        createFigure(300, 2, quiet=True, tight_layout = {'pad': 0.05});\n",
     "        plt.subplot(3,2,1); plt.grid()\n",
-    "        plt.errorbar(dfDistrib.radius,\n",
-    "                 dfDistrib.distrib * intensity, yerr=dfDistrib.err*intensity, ecolor='salmon')\n",
+    "        plt.errorbar(dfDistrib.radius, dfDistrib.distrib, yerr=dfDistrib.err,\n",
+    "                     ecolor='salmon', label=\"normalized\"); plt.legend()\n",
     "        plt.title(continResultDir.name)\n",
-    "        plt.xlim(plotRangeX); plt.xlim(0,1.5e-7)\n",
+    "        plt.xlim(plotRangeX)\n",
     "        plt.subplot(3,2,2); plt.grid()\n",
     "        plt.semilogy(dfDistrib.radius, sigma_sca)\n",
-    "        plt.title(\"Diff. scattering cross section (cm$^2$/sr)\")\n",
+    "        plt.title(\"Diff. scattering cross section (m$^2$/sr)\")\n",
     "        plt.xlim(plotRangeX);\n",
     "        plt.subplot(3,1,2); plt.grid()\n",
     "        plt.plot(dfDistrib.radius, concentrationNumbers,\n",
@@ -385,13 +392,13 @@
     "createFigure(300, 3, quiet=True, tight_layout = {'pad': 0.05});\n",
     "ax = plt.subplot(1,2,1)\n",
     "concentrations.plot('angle', 'cNumbers', marker='.', ax=ax, lw=0, grid=True,\n",
-    "                    label=f\"Number concentration, median: {np.median(concentrations.cNumbers):.1f}\");\n",
+    "    label=f\"Number concentration, median: {np.median(concentrations.cNumbers):.3g}\"+\" $mL^{-1}$\");\n",
     "ax.set_ylabel(r\"Concentration in 1 / mL\")\n",
     "ax.set_xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
     "plt.ylim(0,np.median(concentrations.cNumbers)*3);\n",
     "ax = plt.subplot(1,2,2)\n",
     "concentrations.plot('angle', 'cMass', marker='.', ax=ax, lw=0, grid=True, color='green',\n",
-    "                    label=f\"Mass concentration, median: {np.median(concentrations.cMass):.3g}\");\n",
+    "                    label=f\"Mass concentration, median: {np.median(concentrations.cMass):.3g}\"+\" $g\\,/\\,mL$\");\n",
     "ax.set_ylabel(r\"Concentration in g / mL\")\n",
     "ax.set_xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
     "plt.ylim(0,np.median(concentrations.cMass)*2);"
