Using the largest peak found by CONTIN only

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -32,10 +32,10 @@
    "id": "2ddfa087-ad51-43bb-b25b-91251ac11407",
    "metadata": {},
    "source": [
-    "Refractive Index and density of\n",
-    "- Polypropylene (PP): 1.492 and 0.91 g/mL  \n",
+    "### Refractive Index and density of\n",
+    "- **Polypropylene (PP)**: 1.492 and 0.91 g/mL  \n",
     "  ( https://www.osapublishing.org/ao/abstract.cfm?uri=ao-42-3-592 )\n",
-    "- Polystyrene (PS): 1.593 and 1.05 g/mL"
+    "- **Polystyrene (PS)**: 1.593 and 1.05 g/mL"
    ]
   },
   {
@@ -151,7 +151,7 @@
     "printFileList(tolueneFiles)\n",
     "tolueneData = processDLSMeasurements(tolueneFiles)\n",
     "crTol_mean = crMean(tolueneData)\n",
-    "tolueneData, crTol_mean"
+    "#tolueneData, crTol_mean"
    ]
   },
   {
@@ -165,7 +165,7 @@
     "printFileList(bufferFiles, numParts=10)\n",
     "bufferData = processDLSMeasurements(bufferFiles, monitorDiodeRef=tolueneData['monitorDiode'])\n",
     "crBuf_mean = crMean(bufferData)\n",
-    "bufferData, crBuf_mean"
+    "#bufferData, crBuf_mean"
    ]
   },
   {
@@ -185,7 +185,7 @@
     "particleData['density'] = densityParticle\n",
     "printFileList(particleFiles)\n",
     "crTot_mean = crMean(particleData)\n",
-    "particleData, crTot_mean"
+    "#particleData, crTot_mean"
    ]
   },
   {
@@ -266,12 +266,7 @@
     "    angle=90,\n",
     "    ptRangeSec=(3e-7, 1e0), fitRangeM=sizeRangeM, gridpts=200,\n",
     "    transformData=True, freeBaseline=True, weighResiduals=False,\n",
-    ")\n",
-    "import copy\n",
-    "def updatedDict(d, key, value):\n",
-    "    dd = copy.copy(d)\n",
-    "    dd[key] = value\n",
-    "    return dd"
+    ")"
    ]
   },
   {
@@ -281,8 +276,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "angles = getAngles(particleData)\n",
-    "continConfigs = [updatedDict(continConfig, 'angle', angle) for angle in getAngles(particleData)]\n",
+    "from analyse_dls_with_contin.jupyter_analysis_tools.utils import updatedDict\n",
+    "continConfigs = [updatedDict(continConfig, 'angle', angle)\n",
+    "                 for angle in getAngles(particleData)]\n",
     "#continConfigs"
    ]
   },
@@ -324,20 +320,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "matplotlib.rcParams['figure.max_open_warning'] = 50\n",
     "from analyse_dls_with_contin.jupyter_analysis_tools.plotting import createFigure\n",
-    "from analyse_dls_with_contin.jupyter_analysis_tools.distrib import area, integrate\n",
+    "from analyse_dls_with_contin.jupyter_analysis_tools.distrib import (\n",
+    "    integrate, normalizeDistrib, findPeakRanges, findLocalMinima)\n",
     "from analyse_dls_with_contin.contin import getContinResults\n",
     "import numpy as np\n",
+    "\n",
+    "def getLargestPeak(xarr, yarr):\n",
+    "        peakRanges = findPeakRanges(xarr, yarr, tol=1e-6)\n",
+    "        # refine the peak ranges containing multiple maxima\n",
+    "        peakRanges = findLocalMinima(peakRanges, xarr, yarr)\n",
+    "        # For a given list of peaks (by start/end indices) return only those\n",
+    "        # whose ratio of amount to uncertainty ratio is always below the given max. ratio\n",
+    "        #maxRatio = 1.5\n",
+    "        #self.peakRanges = [(istart, iend) for istart, iend in self.peakRanges\n",
+    "        #                    if maxRatio > 1/np.median(self.y[istart:iend+1]/self.u[istart:iend+1])]\n",
+    "        # Sort the peaks by area and use the largest (last) only, assuming monomodal distributions\n",
+    "        def peakRangeArea(peakRange):\n",
+    "            return integrate(xarr[peakRange[0]:peakRange[1]+1], yarr[peakRange[0]:peakRange[1]+1])\n",
+    "        return sorted(peakRanges, key=peakRangeArea)[-1]\n",
+    "\n",
     "def getConcentration(continResultDir, particleData, bufferData, tolueneData, plotRangeX=None, plot=False):\n",
     "    \"\"\"Implements [equation 8 in Austin 2020](https://link.springer.com/content/pdf/10.1007/s11051-020-04840-8.pdf).\"\"\"\n",
     "    dfDistrib, dfFit, varmap = getContinResults(continResultDir)\n",
     "    # normalize distribution first\n",
-    "    area = integrate(dfDistrib.radius, dfDistrib.distrib)\n",
-    "    dfDistrib.distrib /= area\n",
-    "    dfDistrib.err /= area\n",
+    "    radii, distrib, distribU = normalizeDistrib(dfDistrib.radius, dfDistrib.distrib, dfDistrib.err)\n",
+    "    pstart, pend = getLargestPeak(radii, distrib)\n",
+    "    radii, distrib, distribU = radii[pstart:pend+1], distrib[pstart:pend+1], distribU[pstart:pend+1]\n",
     "    theta = varmap['angle']\n",
     "    I_tot, _ = crAtAngle(particleData, theta)\n",
     "    I_dis, _ = crAtAngle(bufferData, theta)\n",
@@ -346,31 +356,31 @@
     "    wavelen = bufferData[\"Wavelength [nm]\"]\n",
     "    nMedium = bufferData[\"Refractive Index\"]\n",
     "    sigma_sca = np.array([diffScatteringCrossSection(radius, theta, wavelen, nMedium)\n",
-    "                          for radius in dfDistrib.radius*1e9]).flatten()*1e-4 # in m^-2\n",
-    "    concentrationNumbers = dfDistrib.distrib * intensity / sigma_sca # in m^-3\n",
+    "                          for radius in radii*1e9]).flatten()*1e-4 # in m^-2\n",
+    "    concentrationNumbers = distrib * intensity / sigma_sca # in m^-3\n",
     "    concentrationNumbers *= 1e-6 # convert to 1/mL\n",
-    "    concentrationNumbersSum = integrate(dfDistrib.radius, concentrationNumbers)\n",
-    "    volumes = np.pi * dfDistrib.radius**3 * 4/3 # in m^3\n",
+    "    concentrationNumbersSum = integrate(radii, concentrationNumbers)\n",
+    "    volumes = np.pi * radii**3 * 4/3 # in m^3\n",
     "    concentrationMass = particleData['density'] * volumes * concentrationNumbers\n",
-    "    concentrationMassSum = integrate(dfDistrib.radius, concentrationMass)\n",
+    "    concentrationMassSum = integrate(radii, concentrationMass)\n",
     "    if plot:\n",
     "        createFigure(300, 2, quiet=True, tight_layout = {'pad': 0.05});\n",
     "        plt.subplot(3,2,1); plt.grid()\n",
-    "        plt.errorbar(dfDistrib.radius, dfDistrib.distrib, yerr=dfDistrib.err,\n",
+    "        plt.errorbar(radii, distrib, yerr=distribU,\n",
     "                     ecolor='salmon', label=\"normalized\"); plt.legend()\n",
     "        plt.title(continResultDir.name)\n",
     "        plt.xlim(plotRangeX)\n",
     "        plt.subplot(3,2,2); plt.grid()\n",
-    "        plt.semilogy(dfDistrib.radius, sigma_sca)\n",
+    "        plt.semilogy(radii, sigma_sca)\n",
     "        plt.title(\"Diff. scattering cross section (m$^2$/sr)\")\n",
     "        plt.xlim(plotRangeX);\n",
     "        plt.subplot(3,1,2); plt.grid()\n",
-    "        plt.plot(dfDistrib.radius, concentrationNumbers,\n",
+    "        plt.plot(radii, concentrationNumbers,\n",
     "                 label=r\"1/mL=$\\int$\"+\"{:.3g}\".format(concentrationNumbersSum));\n",
     "        plt.ylabel(\"Numbers / mL\")\n",
     "        handles1, labels1 = plt.gca().get_legend_handles_labels()\n",
     "        ax2 = plt.gca().twinx()\n",
-    "        ax2.plot(dfDistrib.radius, concentrationMass, color=\"green\",\n",
+    "        ax2.plot(radii, concentrationMass, color=\"green\",\n",
     "                 label=r\"g/mL=$\\int$\"+\"{:.3g}\".format(concentrationMassSum));\n",
     "        ax2.set_ylabel(\"g / mL\")\n",
     "        handles2, labels2 = plt.gca().get_legend_handles_labels()\n",
@@ -395,13 +405,13 @@
     "    label=f\"Number concentration, median: {np.median(concentrations.cNumbers):.3g}\"+\" $mL^{-1}$\");\n",
     "ax.set_ylabel(r\"Concentration in 1 / mL\")\n",
     "ax.set_xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
-    "plt.ylim(0,np.median(concentrations.cNumbers)*3);\n",
+    "#plt.ylim(0,np.median(concentrations.cNumbers)*3);\n",
     "ax = plt.subplot(1,2,2)\n",
     "concentrations.plot('angle', 'cMass', marker='.', ax=ax, lw=0, grid=True, color='green',\n",
     "                    label=f\"Mass concentration, median: {np.median(concentrations.cMass):.3g}\"+\" $g\\,/\\,mL$\");\n",
     "ax.set_ylabel(r\"Concentration in g / mL\")\n",
     "ax.set_xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
-    "plt.ylim(0,np.median(concentrations.cMass)*2);"
+    "#plt.ylim(0,np.median(concentrations.cMass)*2);"
    ]
   },
   {
