updated contin params

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -262,10 +262,13 @@
    "outputs": [],
    "source": [
     "sizeRangeM = (1e-9, 200e-9)\n",
-    "continConfig = dict(\n",
-    "    angle=90,\n",
+    "continConfig = dict(recalc=True,\n",
     "    ptRangeSec=(3e-7, 1e0), fitRangeM=sizeRangeM, gridpts=200,\n",
-    "    transformData=True, freeBaseline=True, weighResiduals=False,\n",
+    "    transformData=True, baselineCoeffs=0, # N_L\n",
+    "    # weighs noise level of data points accordinly for photon correlation spectroscopy\n",
+    "    # where the variance of Y is proportional to (Y**2+1)/(4*Y**2)\n",
+    "    # (from contin.for, line 1430)\n",
+    "    weighResiduals=True,\n",
     ")"
    ]
   },
@@ -399,7 +402,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "createFigure(300, 3, quiet=True, tight_layout = {'pad': 0.05});\n",
+    "createFigure(300, 3, quiet=True, tight_layout = {'pad': 0.5});\n",
     "ax = plt.subplot(1,2,1)\n",
     "concentrations.plot('angle', 'cNumbers', marker='.', ax=ax, lw=0, grid=True,\n",
     "    label=f\"Number concentration, median: {np.median(concentrations.cNumbers):.3g}\"+\" $mL^{-1}$\");\n",
