show distribution statistics

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -325,32 +325,16 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from analyse_dls_with_contin.jupyter_analysis_tools.plotting import createFigure\n",
-    "from analyse_dls_with_contin.jupyter_analysis_tools.distrib import (\n",
+    "from analyse_dls_with_contin.jupyter_analysis_tools.distrib import (Distribution,\n",
     "    integrate, normalizeDistrib, findPeakRanges, findLocalMinima)\n",
     "from analyse_dls_with_contin.contin import getContinResults\n",
     "import numpy as np\n",
     "\n",
-    "def getLargestPeak(xarr, yarr):\n",
-    "        peakRanges = findPeakRanges(xarr, yarr, tol=1e-6)\n",
-    "        # refine the peak ranges containing multiple maxima\n",
-    "        peakRanges = findLocalMinima(peakRanges, xarr, yarr)\n",
-    "        # For a given list of peaks (by start/end indices) return only those\n",
-    "        # whose ratio of amount to uncertainty ratio is always below the given max. ratio\n",
-    "        #maxRatio = 1.5\n",
-    "        #self.peakRanges = [(istart, iend) for istart, iend in self.peakRanges\n",
-    "        #                    if maxRatio > 1/np.median(self.y[istart:iend+1]/self.u[istart:iend+1])]\n",
-    "        # Sort the peaks by area and use the largest (last) only, assuming monomodal distributions\n",
-    "        def peakRangeArea(peakRange):\n",
-    "            return integrate(xarr[peakRange[0]:peakRange[1]+1], yarr[peakRange[0]:peakRange[1]+1])\n",
-    "        return sorted(peakRanges, key=peakRangeArea)[-1]\n",
-    "\n",
     "def getConcentration(continResultDir, particleData, bufferData, tolueneData, plotRangeX=None, plot=False):\n",
     "    \"\"\"Implements [equation 8 in Austin 2020](https://link.springer.com/content/pdf/10.1007/s11051-020-04840-8.pdf).\"\"\"\n",
     "    dfDistrib, dfFit, varmap = getContinResults(continResultDir)\n",
-    "    # normalize distribution first\n",
-    "    radii, distrib, distribU = normalizeDistrib(dfDistrib.radius, dfDistrib.distrib, dfDistrib.err)\n",
-    "    pstart, pend = getLargestPeak(radii, distrib)\n",
-    "    radii, distrib, distribU = radii[pstart:pend+1], distrib[pstart:pend+1], distribU[pstart:pend+1]\n",
+    "    distrib = Distribution(dfDistrib.radius, dfDistrib.distrib, dfDistrib.err, maxPeakCount=1)\n",
+    "    x, y, u = distrib.peakData(distrib.peaks[0])\n",
     "    theta = varmap['angle']\n",
     "    I_tot, _ = crAtAngle(particleData, theta)\n",
     "    I_dis, _ = crAtAngle(bufferData, theta)\n",
@@ -359,31 +343,30 @@
     "    wavelen = bufferData[\"Wavelength [nm]\"]\n",
     "    nMedium = bufferData[\"Refractive Index\"]\n",
     "    sigma_sca = np.array([diffScatteringCrossSection(radius, theta, wavelen, nMedium)\n",
-    "                          for radius in radii*1e9]).flatten()*1e-4 # in m^-2\n",
-    "    concentrationNumbers = distrib * intensity / sigma_sca # in m^-3\n",
+    "                          for radius in x*1e9]).flatten()*1e-4 # in m^-2\n",
+    "    concentrationNumbers = y * intensity / sigma_sca # in m^-3\n",
     "    concentrationNumbers *= 1e-6 # convert to 1/mL\n",
-    "    concentrationNumbersSum = integrate(radii, concentrationNumbers)\n",
-    "    volumes = np.pi * radii**3 * 4/3 # in m^3\n",
+    "    concentrationNumbersSum = integrate(x, concentrationNumbers)\n",
+    "    volumes = np.pi * x**3 * 4/3 # in m^3\n",
     "    concentrationMass = particleData['density'] * volumes * concentrationNumbers\n",
-    "    concentrationMassSum = integrate(radii, concentrationMass)\n",
+    "    concentrationMassSum = integrate(x, concentrationMass)\n",
     "    if plot:\n",
     "        createFigure(300, 2, quiet=True, tight_layout = {'pad': 0.05});\n",
     "        plt.subplot(3,2,1); plt.grid()\n",
-    "        plt.errorbar(radii, distrib, yerr=distribU,\n",
-    "                     ecolor='salmon', label=\"normalized\"); plt.legend()\n",
-    "        plt.title(continResultDir.name)\n",
-    "        plt.xlim(plotRangeX)\n",
+    "        distPar, _ = distrib.peakDistrPar(plotAxes=[plt.gca()], showFullRange=True)\n",
+    "        \n",
     "        plt.subplot(3,2,2); plt.grid()\n",
-    "        plt.semilogy(radii, sigma_sca)\n",
+    "        plt.semilogy(x, sigma_sca)\n",
     "        plt.title(\"Diff. scattering cross section (m$^2$/sr)\")\n",
     "        plt.xlim(plotRangeX);\n",
+    "        \n",
     "        plt.subplot(3,1,2); plt.grid()\n",
-    "        plt.plot(radii, concentrationNumbers,\n",
+    "        plt.plot(x, concentrationNumbers,\n",
     "                 label=r\"1/mL=$\\int$\"+\"{:.3g}\".format(concentrationNumbersSum));\n",
     "        plt.ylabel(\"Numbers / mL\")\n",
     "        handles1, labels1 = plt.gca().get_legend_handles_labels()\n",
     "        ax2 = plt.gca().twinx()\n",
-    "        ax2.plot(radii, concentrationMass, color=\"green\",\n",
+    "        ax2.plot(x, concentrationMass, color=\"green\",\n",
     "                 label=r\"g/mL=$\\int$\"+\"{:.3g}\".format(concentrationMassSum));\n",
     "        ax2.set_ylabel(\"g / mL\")\n",
     "        handles2, labels2 = plt.gca().get_legend_handles_labels()\n",
