show filename with each plot group (for the angle)

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -22,6 +22,8 @@
     "pathToluene = \"20210511/092 2021 Toluol\"\n",
     "pathBuffer = \"20210511/093 2021 Wasser\"\n",
     "pathSample = \"20210511/094 2021 PS-Standard 1zu1000\"\n",
+    "#pathSample = \"20210511/096 2021 PS-Standard 1zu10000\"\n",
+    "#pathSample = \"20210511/097 2021 PS-Standard 1zu50000\"\n",
     "# for Polypropylene, PS\n",
     "refracParticle = 1.593\n",
     "densityParticle = 1.05*1e6 # g/m^3"
@@ -354,6 +356,7 @@
     "        createFigure(300, 2, quiet=True, tight_layout = {'pad': 0.05});\n",
     "        plt.subplot(3,2,1); plt.grid()\n",
     "        distPar, _ = distrib.peakDistrPar(plotAxes=[plt.gca()], showFullRange=True)\n",
+    "        plt.title(continResultDir.name)\n",
     "        \n",
     "        plt.subplot(3,2,2); plt.grid()\n",
     "        plt.semilogy(x, sigma_sca)\n",
