reordered cells: moved file select to the top

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -42,10 +42,63 @@
   },
   {
    "cell_type": "markdown",
+   "id": "84c4276b-d116-46e2-8cd3-265d139de75b",
+   "metadata": {},
+   "source": [
+    "## Select measurement files for Toluene, Buffer and Sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a6e03d3-b553-4d97-a9b5-6b6bfbb8918f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from analyse_dls_with_contin.jupyter_analysis_tools.datalocations import getDataDirs, getDataFiles, printFileList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0458ddfb-66d4-4bf4-8f87-8b3f4591f178",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tolueneFiles = getDataFiles(pathToluene, include=\"*.ASC\", exclude=\"_average\")\n",
+    "printFileList(tolueneFiles, numParts=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fb48e0b-fac8-41ae-8490-d83fb67f7af2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bufferFiles = getDataFiles(pathBuffer, include=\"*.ASC\", exclude=\"_average\")\n",
+    "printFileList(bufferFiles, numParts=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4597800e-2571-4f68-a8b9-960bb3dc3928",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "particleFiles = getDataFiles(pathSample, include=\"*averaged.ASC\")\n",
+    "#particleFiles = getDataFiles(pathSample, include=\"*.ASC\", exclude=\"_average\")\n",
+    "printFileList(particleFiles, numParts=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e82e7d8e-5baf-477e-a853-67b53075657b",
    "metadata": {},
    "source": [
-    "### Helpers"
+    "### Read DLS intensity (count rate) and normalize its scaling across measurements"
    ]
   },
   {
@@ -134,23 +187,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c69416a-e148-433f-8a08-79d05db4861d",
+   "id": "17a3f962-b003-40aa-9a40-b8eb3c1309c8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from analyse_dls_with_contin.jupyter_analysis_tools.datalocations import getDataDirs, getDataFiles, printFileList"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5345b626-daa1-406b-900b-ad0c32aadbfa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "tolueneFiles = getDataFiles(pathToluene, include=\"*.ASC\", exclude=\"_average\")\n",
-    "printFileList(tolueneFiles)\n",
     "tolueneData = processDLSMeasurements(tolueneFiles)\n",
     "crTol_mean = crMean(tolueneData)\n",
     "#tolueneData, crTol_mean"
@@ -159,12 +199,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "321b407e-b576-4363-bcdd-506ca9487867",
+   "id": "606c3b93-fbd9-474a-9df8-7f7b042352e1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bufferFiles = getDataFiles(pathBuffer, include=\"*.ASC\", exclude=\"_average\")\n",
-    "printFileList(bufferFiles, numParts=10)\n",
     "bufferData = processDLSMeasurements(bufferFiles, monitorDiodeRef=tolueneData['monitorDiode'])\n",
     "crBuf_mean = crMean(bufferData)\n",
     "#bufferData, crBuf_mean"
@@ -173,19 +211,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23ffc8e4-ea3d-4a66-bc9f-a99547c96c12",
+   "id": "e8fcf9cd-e56d-4121-bc62-3485abd786bb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if True: # use averaged files?\n",
-    "    particleFiles = getDataFiles(pathSample, include=\"*averaged.ASC\")\n",
+    "if all((\"_averaged.ASC\" in fn for fn in particleFiles)):\n",
+    "    # hotfix for averaged files, compare with non-avg files:\n",
     "    # Monitor diode reference: 1567735, this mon. diode:   21146, scale: 74.138438 (094 2021 PS-Standard 1zu1000)\n",
     "    particleData = processDLSMeasurements(particleFiles, monitorDiodeScale=74.138438)\n",
     "else:\n",
-    "    particleFiles = getDataFiles(pathSample, include=\"*.ASC\", exclude=\"_average\")\n",
     "    particleData = processDLSMeasurements(particleFiles, monitorDiodeRef=tolueneData['monitorDiode'])\n",
     "particleData['density'] = densityParticle\n",
-    "printFileList(particleFiles)\n",
     "crTot_mean = crMean(particleData)\n",
     "#particleData, crTot_mean"
    ]
