options for filtering distributions based on data quality and CONTIN uncertainties

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -89,7 +89,7 @@
    "outputs": [],
    "source": [
     "particleFiles = getDataFiles(pathSample, include=\"*averaged.ASC\")\n",
-    "#particleFiles = getDataFiles(pathSample, include=\"*.ASC\", exclude=\"_average\")\n",
+    "particleFiles = getDataFiles(pathSample, include=\"*.ASC\", exclude=\"_average\")\n",
     "printFileList(particleFiles, numParts=10)"
    ]
   },
@@ -372,6 +372,10 @@
     "    \"\"\"Implements [equation 8 in Austin 2020](https://link.springer.com/content/pdf/10.1007/s11051-020-04840-8.pdf).\"\"\"\n",
     "    dfDistrib, dfFit, varmap = getContinResults(continResultDir)\n",
     "    distrib = Distribution(dfDistrib.radius, dfDistrib.distrib, dfDistrib.err, maxPeakCount=1)\n",
+    "    if abs(1.-varmap.get('score', 1.0)) > 0.10:\n",
+    "        return # skip this one, data score too bad\n",
+    "    if distrib.uncertRatioMedian(distrib.peaks[0]) > 0.1:\n",
+    "        return # skip this one, distribution peak uncertainty to large\n",
     "    x, y, u = distrib.peakData(distrib.peaks[0])\n",
     "    theta = varmap['angle']\n",
     "    I_tot, _ = crAtAngle(particleData, theta)\n",
@@ -392,8 +396,9 @@
     "        createFigure(300, 2, quiet=True, tight_layout = {'pad': 0.05});\n",
     "        plt.subplot(3,2,1); plt.grid()\n",
     "        distPar, _ = distrib.peakDistrPar(plotAxes=[plt.gca()], showFullRange=True)\n",
-    "        plt.title(continResultDir.name)\n",
-    "        \n",
+    "        plt.title(continResultDir.name+\"\\n(\"+(f\"score: {varmap['score']}, \" if 'score' in varmap else \"\")\n",
+    "                  +\"$U_{ratio}$: \"+f\"{distrib.uncertRatioMedian(distrib.peaks[0]):.3f})\")\n",
+    "\n",
     "        plt.subplot(3,2,2); plt.grid()\n",
     "        plt.semilogy(x, sigma_sca)\n",
     "        plt.title(\"Diff. scattering cross section (m$^2$/sr)\")\n",
@@ -414,7 +419,7 @@
     "    return theta, concentrationNumbersSum, concentrationMassSum\n",
     "\n",
     "concentrations = pd.DataFrame([getConcentration(dn, particleData, bufferData, tolueneData, plotRangeX=sizeRangeM, plot=True)\n",
-    "                               for dn in sorted(resultDirs)], columns=(\"angle\", \"cNumbers\", \"cMass\"))"
+    "                               for dn in sorted(resultDirs)], columns=(\"angle\", \"cNumbers\", \"cMass\")).dropna()"
    ]
   },
   {
