adjusted thresholds for filtering distributions during testing

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -372,10 +372,10 @@
     "    \"\"\"Implements [equation 8 in Austin 2020](https://link.springer.com/content/pdf/10.1007/s11051-020-04840-8.pdf).\"\"\"\n",
     "    dfDistrib, dfFit, varmap = getContinResults(continResultDir)\n",
     "    distrib = Distribution(dfDistrib.radius, dfDistrib.distrib, dfDistrib.err, maxPeakCount=1)\n",
-    "    if abs(1.-varmap.get('score', 1.0)) > 0.10:\n",
-    "        return # skip this one, data score too bad\n",
-    "    if distrib.uncertRatioMedian(distrib.peaks[0]) > 0.1:\n",
-    "        return # skip this one, distribution peak uncertainty to large\n",
+    "    if abs(1.-varmap.get('score', 1.0)) > 0.08:\n",
+    "        return None, None, None # skip this one, data score too bad\n",
+    "    if distrib.uncertRatioMedian(distrib.peaks[0]) > 0.08:\n",
+    "        return None, None, None # skip this one, distribution peak uncertainty to large\n",
     "    x, y, u = distrib.peakData(distrib.peaks[0])\n",
     "    theta = varmap['angle']\n",
     "    I_tot, _ = crAtAngle(particleData, theta)\n",
