minor documentation fix

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -7,9 +7,10 @@
    "source": [
     "# [Nanoparticle number concentration measurements by multi-angle dynamic light scattering](https://doi.org/10.1007/s11051-020-04840-8)\n",
     "\n",
-    "Implementation following\n",
+    "This python implementation is based on:\n",
     "\n",
-    "    Austin, J., Minelli, C., Hamilton, D. et al. Nanoparticle number concentration measurements by multi-angle dynamic light scattering. J Nanopart Res 22, 108 (2020). https://doi.org/10.1007/s11051-020-04840-8"
+    "    Austin, J., Minelli, C., Hamilton, D. et al. Nanoparticle number concentration measurements by multi-angle dynamic light scattering. J Nanopart Res 22, 108 (2020).\n",
+    "    https://doi.org/10.1007/s11051-020-04840-8"
    ]
   },
   {
