Show a warning and abort when no files where selected

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -43,6 +43,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2b38af7d-905a-4221-9934-b7fd3cdcb450",
+   "metadata": {},
+   "source": [
+    "## More parameters to adjust"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "773239f3-b27d-440a-9766-8b19a603c9b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Threshold for data to be included. Calculated by modified z-score based on median absolute deviation (MAD)\n",
+    "# of the measured count rate in https://github.com/BAMresearch/jupyter_analysis_tools/blob/main/analysis.py\n",
+    "countRateScoreMax = 0.08\n",
+    "# Threshold for a distribution to be included. Calculated by the median ratio of distribution value against\n",
+    "# its uncertainty which are determined by CONTIN. Kind of quality indicator for the solution found.\n",
+    "uncertRatioMax = 0.08"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "84c4276b-d116-46e2-8cd3-265d139de75b",
    "metadata": {},
    "source": [
@@ -68,6 +91,7 @@
    "outputs": [],
    "source": [
     "tolueneFiles = getDataFiles(pathToluene, include=\"*.ASC\", exclude=\"_average\")\n",
+    "assert len(tolueneFiles), \"No files for Toluene selected!\"\n",
     "printFileList(tolueneFiles, numParts=10)"
    ]
   },
@@ -79,6 +103,7 @@
    "outputs": [],
    "source": [
     "bufferFiles = getDataFiles(pathBuffer, include=\"*.ASC\", exclude=\"_average\")\n",
+    "assert len(bufferFiles), \"No files for the buffer selected!\"\n",
     "printFileList(bufferFiles, numParts=10)"
    ]
   },
@@ -91,6 +116,7 @@
    "source": [
     "particleFiles = getDataFiles(pathSample, include=\"*averaged.ASC\")\n",
     "particleFiles = getDataFiles(pathSample, include=\"*.ASC\", exclude=\"_average\")\n",
+    "assert len(particleFiles), \"No files for the particles selected!\"\n",
     "printFileList(particleFiles, numParts=10)"
    ]
   },
@@ -369,13 +395,14 @@
     "from analyse_dls_with_contin.contin import getContinResults\n",
     "import numpy as np\n",
     "\n",
-    "def getConcentration(continResultDir, particleData, bufferData, tolueneData, plotRangeX=None, plot=False):\n",
+    "def getConcentration(continResultDir, particleData, bufferData, tolueneData,\n",
+    "                     countRateScoreMax=1., uncertRatioMax=1., plotRangeX=None, plot=False):\n",
     "    \"\"\"Implements [equation 8 in Austin 2020](https://link.springer.com/content/pdf/10.1007/s11051-020-04840-8.pdf).\"\"\"\n",
     "    dfDistrib, dfFit, varmap = getContinResults(continResultDir)\n",
     "    distrib = Distribution(dfDistrib.radius, dfDistrib.distrib, dfDistrib.err, maxPeakCount=1)\n",
-    "    if abs(1.-varmap.get('score', 1.0)) > 0.08:\n",
+    "    if abs(1.-varmap.get('score', 1.0)) > countRateScoreMax:\n",
     "        return None, None, None # skip this one, data score too bad\n",
-    "    if distrib.uncertRatioMedian(distrib.peaks[0]) > 0.08:\n",
+    "    if distrib.uncertRatioMedian(distrib.peaks[0]) > uncertRatioMax:\n",
     "        return None, None, None # skip this one, distribution peak uncertainty to large\n",
     "    x, y, u = distrib.peakData(distrib.peaks[0])\n",
     "    theta = varmap['angle']\n",
@@ -419,8 +446,11 @@
     "        plt.legend(handles1+handles2, labels1+labels2)\n",
     "    return theta, concentrationNumbersSum, concentrationMassSum\n",
     "\n",
-    "concentrations = pd.DataFrame([getConcentration(dn, particleData, bufferData, tolueneData, plotRangeX=sizeRangeM, plot=True)\n",
-    "                               for dn in sorted(resultDirs)], columns=(\"angle\", \"cNumbers\", \"cMass\")).dropna()"
+    "concentrations = pd.DataFrame([getConcentration(dn, particleData, bufferData, tolueneData,\n",
+    "                                                countRateScoreMax=countRateScoreMax, uncertRatioMax=uncertRatioMax,\n",
+    "                                                plotRangeX=sizeRangeM, plot=True)\n",
+    "                               for dn in sorted(resultDirs)],\n",
+    "                              columns=(\"angle\", \"cNumbers\", \"cMass\")).dropna()"
    ]
   },
   {
